Core mechanics implemented